# wav2mp3

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/conversion/: audio_storage.h  wav_header.h
include/export/: mp3_writer.h
include/import/: wav_reader.h
include/lame/: lame.h
include/utils/: mutex.h  thread_pool.h  utils.h  wav_file_path_resolver.h
lib/x64/: libmp3lame64.lib
lib/x86/: libmp3lame.lib
pthread/: pthread.h
src/export/: mp3_writer.cpp
src/import/: wav_reader.cpp
src/utils/: mutex.cpp  utils.cpp  wav_file_path_resolver.cpp
